--- a/week2/microblog/views/by_tag.erb
+++ b/week2/microblog/views/by_tag.erb
@@ -4,27 +4,7 @@
 
 <% if posts.present? %>
     <% posts.each do |post| %>
-      <div class="panel">
-            <div class="panel-heading">
-                <div class="text-center">
-                    <div class="row">
-                        <div class="col-sm-9">
-                            <a href="/<%= post.id %>"><h3 class="pull-left"><%= post.title %></h3></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-                
-            <div class="panel-body">
-                <%= post.content %>
-            </div>
-            
-            <div class="panel-footer tags">
-                <% post.tags.each do |tag| %>
-                    <span class="label label-default"><%= tag %></span>
-                <% end %>
-            </div>
-        </div>
+      <%= erb :_post_list, :locals => {:post => post, :post_id => post.id} %>
     <% end %>
 <% else %>
     <p>No posts exist for this tag yet.</p>
