Improve code reuse again: back button

--- a/week2/microblog/views/by_tag.erb
+++ b/week2/microblog/views/by_tag.erb
@@ -1,4 +1,4 @@
-<a href="/" class='btn btn-link'>&laquo; Back to homepage</a>
+<%= erb :_back_button %>
 
 <h3>Posts with tag &quot;<%= tag %>&quot;</h3>
 
