--- a/week2/microblog/views/oops.erb
+++ b/week2/microblog/views/oops.erb
@@ -1,4 +1,4 @@
-<a href="/" class='btn btn-link'>&laquo; Back to homepage</a>
+<%= erb :_back_button %>
 
 <h3>404 - this is not the page you are looking for</h3>
 <img src="/img/droids.jpg" alt="404 error">
