--- a/week2/microblog/views/post.erb
+++ b/week2/microblog/views/post.erb
@@ -1,4 +1,4 @@
-<a href="/" class='btn btn-link'>&laquo; Back to homepage</a>
+<%= erb :_back_button %>
 
 <div class="panel">
     <div class="panel-heading">
