--- a/week3/2-extend-the-blog/app/views/home/index.html.erb
+++ b/week3/2-extend-the-blog/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Microblog</h1>
 
-<a href="/posts/new" class="btn btn-primary">Add post</a>
+<a href="/posts/new" class="btn btn-primary">Add post</a> <a href="/photos/new" class="btn btn-primary">Add photo</a>
 
 <% if @tags.present? %>
     <h3>Tags</h3>
