--- a/week3/2-extend-the-blog/app/views/posts/show.html.erb
+++ b/week3/2-extend-the-blog/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
     </div>
         
     <div class="panel-body">
-        <p><%= @post.content %></p>
+        <p><%= render partial: @post.data_template, locals: { data: @post.data, post: @post } %></p>
     </div>
     
     <div class="panel-footer tags">
