--- a/week5/course-management/app/views/lectures/new.html.erb
+++ b/week5/course-management/app/views/lectures/new.html.erb
@@ -4,21 +4,22 @@
 
 <div class="row">
     <div class="col-md-5">
-        <%= form_tag("/lectures", method: "post") do %>
+        <%= form_for @lecture, url: '/lectures' do |f| %>
+        <% console %>
             <div class="panel panel-default">
                 <div class="panel-body form-horizontal payment-form">
-                    <div class="form-group <%= field_valid('name') %>">
+                    <div class="form-group <%= field_valid(:name, f) %>">
                         <label for="lecture[name]" class="col-sm-3 control-label">Name</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="name" name="lecture[name]">
-                            <%= field_error_message 'name' %>
+                            <%= f.text_field :name, class: 'form-control' %>
+                            <%= field_error_message :name, f %>
                         </div>
                     </div>
-                    <div class="form-group <%= field_valid('description') %>">
+                    <div class="form-group <%= field_valid(:description, f) %>">
                         <label for="lecture[description]" class="col-sm-3 control-label">Description</label>
                         <div class="col-sm-9">
-                            <textarea class="form-control" id="description" name="lecture[description]"></textarea>
-                            <%= field_error_message 'description' %>
+                            <%= f.text_area :description, class: 'form-control' %>
+                            <%= field_error_message :description, f %>
                         </div>
                     </div> 
                     <div class="form-group last">
