--- a/week5/course-management/app/views/lectures/edit.html.erb
+++ b/week5/course-management/app/views/lectures/edit.html.erb
@@ -1,10 +1,10 @@
 <%= render '/back_button' %>
 
-<h3>New lecture</h3>
+<h3>Edit lecture</h3>
 
 <div class="row">
     <div class="col-md-5">
-        <%= form_for @lecture, url: '/lectures' do |f| %>
+        <%= form_for @lecture, method: :put do |f| %>
             <div class="panel panel-default">
                 <div class="panel-body form-horizontal payment-form">
                     <div class="form-group <%= field_valid(:name, f) %>">
