Code improvements for tasks | course management

--- a/week5/course-management/app/views/tasks/index.html.erb
+++ b/week5/course-management/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <%= render '/back_button' %>
 
-<a href="/lectures/<%= @lecture.id %>/tasks/new" class="btn btn-primary">Add task</a>
+<a href="<%= lecture_path(@lecture) %>/tasks/new" class="btn btn-primary">Add task</a>
 
 <h3>Tasks</h3>
 <h4><%= @lecture.name %></h4>
@@ -15,9 +15,9 @@
             <tr>
                 <td><%= task.name %></td>
                 <td class='buttons'>
-                    <a href="/lectures/<%= @lecture.id %>/tasks/<%= task.id %>" class="btn btn-xs btn-default">View</a>
-                    <a href="/lectures/<%= @lecture.id %>/tasks/<%= task.id %>/edit" class="btn btn-xs btn-default">Edit</a>
-                    <a href="/lectures/<%= @lecture.id %>/tasks/<%= task.id %>/solutions" class="btn btn-xs btn-info">Solutions</a>
+                    <a href="<%= lecture_task_path(@lecture, task) %>" class="btn btn-xs btn-default">View</a>
+                    <a href="<%= lecture_task_path(@lecture, task) %>/edit" class="btn btn-xs btn-default">Edit</a>
+                    <a href="<%= lecture_task_path(@lecture, task) %>/solutions" class="btn btn-xs btn-info">Solutions</a>
                 </td>
             </tr>
         <% end %>
