--- a/week5/course-management/app/views/tasks/_back_button.html.erb
+++ b/week5/course-management/app/views/tasks/_back_button.html.erb
@@ -1,1 +1,1 @@
-<p><a href="/lectures/<%= @lecture.id %>/tasks" class='btn btn-link'>&laquo; Back to tasks</a></p>
+<p><a href="<%= lecture_path @lecture %>/tasks" class='btn btn-link'>&laquo; Back to tasks</a></p>
