--- a/week5/course-management/app/views/lectures/new.html.erb
+++ b/week5/course-management/app/views/lectures/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-5">
-        <%= form_for @lecture, url: '/lectures' do |f| %>
+        <%= form_for @lecture do |f| %>
             <div class="panel panel-default">
                 <div class="panel-body form-horizontal payment-form">
                     <div class="form-group <%= field_valid(:name, f) %>">
