--- a/week5/course-management/app/views/solutions/_back_button.html.erb
+++ b/week5/course-management/app/views/solutions/_back_button.html.erb
@@ -1,1 +1,1 @@
-<p><a href="<%= lecture_task_path @lecture, @task %>/solutions" class='btn btn-link'>&laquo; Back to solutions</a></p>
+<p><a href="<%= lecture_task_path @lecture, @task %>/solutions" class=''>&laquo; Back to solutions</a></p>
