--- a/week5/course-management/app/views/solutions/index.html.erb
+++ b/week5/course-management/app/views/solutions/index.html.erb
@@ -1,4 +1,4 @@
-<p><a href="<%= lecture_path @lecture %>/tasks" class='btn btn-link'>&laquo; Back to tasks</a></p>
+<p><a href="<%= lecture_path @lecture %>/tasks" class=''>&laquo; Back to tasks</a></p>
 
 <a href="<%= lecture_task_path(@lecture, @task) %>/solutions/new" class="btn btn-primary">Add solution</a>
 
