--- a/week5/course-management/app/views/tasks/show.html.erb
+++ b/week5/course-management/app/views/tasks/show.html.erb
@@ -1,13 +1,16 @@
 <%= render 'back_button' %>
 
-<div class="panel">
+<div class="panel panel-default">
     <div class="panel-heading">
-        <h3><%= @task.name %></h3>        
+        <h3 class='panel-title'><%= @task.name %></h3>        
     </div>
         
     <div class="panel-body">
-        <p><%= @task.description %></p>
-        <p><small><%= @lecture.name %></small></p>
+        <%= @task.description %>
+    </div>
+
+    <div class="panel-footer">
+        <%= @lecture.name %>
     </div>
 </div>
 
