--- a/week5/course-management/app/views/tasks/edit.html.erb
+++ b/week5/course-management/app/views/tasks/edit.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-5">
-        <%= form_for [@lecture, @task], method: :put do |f| %>
+        <%= form_for [@struct.lecture, @struct.task], method: :put do |f| %>
             <div class="panel panel-default">
                 <div class="panel-body form-horizontal payment-form">
                     <div class="form-group <%= field_valid(:name, f) %>">
