--- a/week5/course-management/app/views/tasks/show.html.erb
+++ b/week5/course-management/app/views/tasks/show.html.erb
@@ -2,21 +2,21 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class='panel-title'><%= @task.name %></h3>        
+        <h3 class='panel-title'><%= @struct.task.name %></h3>        
     </div>
         
     <div class="panel-body">
-        <%= @task.description %>
+        <%= @struct.task.description %>
     </div>
 
     <div class="panel-footer">
-        <%= @lecture.name %>
+        <%= @struct.lecture.name %>
     </div>
 </div>
 
 <p>
-    <%= form_tag(lecture_task_path(@lecture, @task), method: "delete") do %>
-        <a href="<%= lecture_task_path(@lecture, @task) %>/edit" class="btn btn-xs btn-default">Edit</a>
+    <%= form_tag(lecture_task_path(@struct.lecture, @struct.task), method: "delete") do %>
+        <a href="<%= lecture_task_path(@struct.lecture, @struct.task) %>/edit" class="btn btn-xs btn-default">Edit</a>
         <button type='submit' class='btn btn-danger btn-xs'>Delete task</button>
     <% end %>
 </p>
