--- a/week5/course-management/app/views/solutions/index.html.erb
+++ b/week5/course-management/app/views/solutions/index.html.erb
@@ -1,22 +1,22 @@
-<p><a href="<%= lecture_path @lecture %>/tasks" class=''>&laquo; Back to tasks</a></p>
+<p><a href="<%= lecture_path @struct.lecture %>/tasks" class=''>&laquo; Back to tasks</a></p>
 
-<a href="<%= lecture_task_path(@lecture, @task) %>/solutions/new" class="btn btn-primary">Add solution</a>
+<a href="<%= lecture_task_path(@struct.lecture, @struct.task) %>/solutions/new" class="btn btn-primary">Add solution</a>
 
 <h3>Solutions</h3>
-<h4><%= @lecture.name %> - <%= @task.name %></h4>
+<h4><%= @struct.lecture.name %> - <%= @struct.task.name %></h4>
 
-<% if @solutions.present? %>
+<% if @struct.solutions.present? %>
     <table class="table table-hover table-striped table-condensed">
         <tr>
             <th>Name</th>
             <th></th>
         </tr>
-        <% @solutions.each do |solution| %>
+        <% @struct.solutions.each do |solution| %>
             <tr>
                 <td>Solution #<%= solution.id %></td>
                 <td class='buttons'>
-                    <a href="<%= lecture_task_solution_path(@lecture, @task, solution) %>" class="btn btn-xs btn-default">View</a>
-                    <a href="<%= lecture_task_solution_path(@lecture, @task, solution) %>/edit" class="btn btn-xs btn-default">Edit</a>
+                    <a href="<%= lecture_task_solution_path(@struct.lecture, @struct.task, solution) %>" class="btn btn-xs btn-default">View</a>
+                    <a href="<%= lecture_task_solution_path(@struct.lecture, @struct.task, solution) %>/edit" class="btn btn-xs btn-default">Edit</a>
                 </td>
             </tr>
         <% end %>
