--- a/week5/course-management/app/views/solutions/show.html.erb
+++ b/week5/course-management/app/views/solutions/show.html.erb
@@ -2,21 +2,21 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class='panel-title'>Solution #<%= @solution.id %></h3>        
+        <h3 class='panel-title'>Solution #<%= @struct.solution.id %></h3>        
     </div>
         
     <div class="panel-body">
-        <%= @solution.body %>
+        <%= @struct.solution.body %>
     </div>
 
     <div class="panel-footer">
-        <%= @lecture.name %> - <%= @task.name %>
+        <%= @struct.lecture.name %> - <%= @struct.task.name %>
     </div>
 </div>
 
 <p>
-    <%= form_tag(lecture_task_solution_path(@lecture, @task, @solution), method: "delete") do %>
-        <a href="<%= lecture_task_solution_path(@lecture, @task, @solution) %>/edit" class="btn btn-xs btn-default">Edit</a>
+    <%= form_tag(lecture_task_solution_path(@struct.lecture, @struct.task, @struct.solution), method: "delete") do %>
+        <a href="<%= lecture_task_solution_path(@struct.lecture, @struct.task, @struct.solution) %>/edit" class="btn btn-xs btn-default">Edit</a>
         <button type='submit' class='btn btn-danger btn-xs'>Delete solution</button>
     <% end %>
 </p>
