--- a/week5/course-management/app/views/tasks/index.html.erb
+++ b/week5/course-management/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <%= render '/back_button' %>
 
-<a href="<%= lecture_path(@struct.lecture) %>/tasks/new" class="btn btn-primary">Add task</a>
+<a href="<%= new_lecture_task_path(@struct.lecture) %>" class="btn btn-primary">Add task</a>
 
 <h3>Tasks</h3>
 <h4><%= @struct.lecture.name %></h4>
@@ -16,8 +16,8 @@
                 <td><%= task.name %></td>
                 <td class='buttons'>
                     <a href="<%= lecture_task_path(@struct.lecture, task) %>" class="btn btn-xs btn-default">View</a>
-                    <a href="<%= lecture_task_path(@struct.lecture, task) %>/edit" class="btn btn-xs btn-default">Edit</a>
-                    <a href="<%= lecture_task_path(@struct.lecture, task) %>/solutions" class="btn btn-xs btn-info">Solutions</a>
+                    <a href="<%= edit_lecture_task_path(@struct.lecture, task) %>" class="btn btn-xs btn-default">Edit</a>
+                    <a href="<%= lecture_task_solutions_path(@struct.lecture, task) %>" class="btn btn-xs btn-info">Solutions</a>
                 </td>
             </tr>
         <% end %>
